Avoid minSdk-sensitive String API [skip ci]